src/objects/SFDC_Project__c.object
<CustomObject>
    <description>Project Management</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N700000023TWtEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N700000023TWhEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objective</label>
        <referenceTo>Objective__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N700000023TWfEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <displayFormat>PRJ - {0000}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SFDC_Days_Remaining__c</fullName>
        <formula>SFDC_Project_End_Date__c -  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Duration__c</fullName>
        <formula>SFDC_Project_End_Date__c  -  SFDC_Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N700000023TWeEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Name__c</fullName>
        <description>Descriptive Project Name</description>
        <label>SFDC Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Stage__c</fullName>
        <label>Project Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Start-up</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing Down</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Status_Description__c</fullName>
        <label>Status Description</label>
        <type>TextArea</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>ActiveProjects</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Project_Stage__c</columns>
        <columns>SFDC_Project_Start_Date__c</columns>
        <columns>SFDC_Project_End_Date__c</columns>
        <columns>SFDC_Project_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFDC_Project_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Active Projects</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Project_Stage__c</columns>
        <columns>SFDC_Project_Start_Date__c</columns>
        <columns>SFDC_Project_End_Date__c</columns>
        <columns>SFDC_Project_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>